publish: small change for redeploy
generated from commit 89558fd07ccae8df81fa15561b63ae3edcdcc915

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ You must replace <code>VALID_ACCESS_TOKEN</code> with your application's access 
 <h1 id='hotels'>Hotels</h1><h2 id='get-rates'>Get Rates</h2><pre class="highlight ruby tab-ruby"><code> <span class="c1"># TODO add ruby example</span>
 </code></pre>
 <blockquote>
-<p>The above command returns JSON structured like this:</p>
+<p>The endpoint returns JSON structured like this:</p>
 </blockquote>
 <pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
     </span><span class="s2">"checkin_date"</span><span class="p">:</span><span class="w"> </span><span class="s2">"2019-09-03"</span><span class="p">,</span><span class="w">
